--- a/FrontEnd/loginpage.css
+++ b/FrontEnd/loginpage.css
@@ -1,7 +1,7 @@
 body {
   padding: 0;
   margin: 0;
-  background-image: url(./image/project\ bg.jpg);
+  background-image: url(./Assets/bg-image.jpg);
   background-size: 100vw 100vh;
   background-repeat: no-repeat;
 }
