--- a/FrontEnd/css/style.css
+++ b/FrontEnd/css/style.css
@@ -1,4 +1,49 @@
 html,
+main {
+    height: 100vh;
+}
+
+.form-container {
+    padding: 40px;
+    width: 500px;
+    backdrop-filter: blur(10px);
+    background-color: white;
+    border-radius: 10px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 5px;
+    border: 1px solid #555;
+    background: rgba(255, 255, 255, 0.1);
+    color: white;
+}
+
+.btn-sign {
+    width: 100%;
+    background: #6f42c1;
+    padding: 10px;
+    color: white;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+}
+
+.google-btn {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: white;
+    color: black;
+    padding: 10px;
+    border-radius: 15px;
+    cursor: pointer;
+}
 
 body {
     height: 100%;
@@ -44,14 +89,6 @@ main {
     left: 10px;
 }
 
-.form-container {
-    background-color: white;
-    padding: 40px;
-    border-radius: 10px;
-    max-width: 500px;
-    margin: 0 auto;
-    text-align: center;
-}
 
 .form-container h1 {
     font-family: 'IBM Plex Mono', monospace;
@@ -65,6 +102,13 @@ main {
     margin-bottom: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
+}
+.form-container label{
+    text-align: left;
+    display: block;
+    margin-bottom: 5px;
+    color: #333;
+    font-weight: bold;
 }
 
 .form-container button {
