--- a/FrontEnd/css/main.css
+++ b/FrontEnd/css/main.css
@@ -8,7 +8,7 @@ main {
   font-family: 'Poppins', sans-serif;
 }
 .challenge-box {
-  background-color: white;
+  background-color: rgb(86, 178, 239);
   padding: 20px;
   border-radius: 10px;
   margin-bottom: 20px;
